kubernetes/demo-lab.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubepulse-lab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-failure
  namespace: kubepulse-lab
  labels:
    app: lab-failure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-failure
  template:
    metadata:
      labels:
        app: lab-failure
    spec:
      containers:
        - name: crash-demo
          image: busybox:1.36
          command:
            - /bin/sh
            - -c
          args:
            - |
              echo "Bootstrapping report processor";
              sleep 2;
              echo "ERROR: Unable to reach MongoDB at $DB_HOST";
              exit 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-pending
  namespace: kubepulse-lab
  labels:
    app: lab-pending
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-pending
  template:
    metadata:
      labels:
        app: lab-pending
    spec:
      nodeSelector:
        lab/demo: unschedulable
      containers:
        - name: pending-demo
          image: busybox:1.36
          command:
            - /bin/sh
            - -c
            - "echo 'Waiting for resources...'; sleep 3600"
